tests/baselines/reference/Protected2.errors.txt
Protected2.ts(1,1): error TS1044: 'protected' modifier cannot appear on a module or namespace element.


==== Protected2.ts (1 errors) ====
    protected namespace M {
    ~~~~~~~~~
!!! error TS1044: 'protected' modifier cannot appear on a module or namespace element.
    }